App Chat Unread Notification Bubble

--- a/BLAZAMGui/UI/Chat/AppChat.razor
+++ b/BLAZAMGui/UI/Chat/AppChat.razor
@@ -30,13 +30,24 @@
                                  @bind-Toggled=@_drawerOpen>
                 Menu
             </MudToggleIconButton>
-
+            @{
+                int unreadAppMessageCount = Chat.GetUnreadMessages(currentUserState.Preferences).Where(ur => ur.ChatRoomId == AppChatRoom.Id).Count();
+            }
+            <MudBadge Visible=@(unreadAppMessageCount>0)
+                      Class="mud-width-full"
+                      Overlap=true
+                      BadgeClass="left-0"
+                      Origin="Origin.TopLeft"
+                      Max="99"
+                      Content="unreadAppMessageCount"
+                      Color="Color.Error">
             <MudNavLink OnClick="@(()=>{SwitchTo(AppChatRoom);})"
                         Icon="@Icons.Material.Filled.AllInclusive">
                 App Chat
             </MudNavLink>
+            </MudBadge>
             @{
-                int unreadMessageCount = Chat.GetUnreadMessages(currentUserState.Preferences).Count();
+                int unreadMessageCount = Chat.GetUnreadMessages(currentUserState.Preferences).Where(ur=>ur.ChatRoomId!=AppChatRoom.Id).Count();
             }
             <MudBadge Visible=@((!_chatsExpanded||!_drawerOpen)&& unreadMessageCount>0)
                       Class="mud-width-full"
