Fix for Dev Tools showing when not in dev mode

--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -11,7 +11,7 @@
 
 @if (MOTD.HasValue && MOTD.Value.ToString() != "")
 {
-    <MudAlert ShowCloseIcon Elevation="3">
+    <MudAlert Class="mb-6" ShowCloseIcon Elevation="3">
 
 
         @MOTD.Value
