--- a/BLAZAMGui/Layouts/ErrorLayout.razor
+++ b/BLAZAMGui/Layouts/ErrorLayout.razor
@@ -1,12 +1,57 @@
 ﻿
 @inherits LayoutComponentBase
+@inject NavigationManager Nav
 
 
 
 
 <PageTitle>Error</PageTitle>
+<MudLayout Style="min-height:98vh;">
+
+                <CascadingValue Value="this">
+        <MudAppBar Color=Color.Default Elevation="1" >
+            <MudLink Href="@Nav.Uri">
+                <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
+            </MudLink>
+            </MudAppBar>
+
+                </CascadingValue>
+
+               
+               
+
+
+                <MudMainContent Class="mud-height-full">
+  
+
+                    <MudContainer
+                                  MaxWidth="MaxWidth.Large"
+                                  Class="pt-5 pb-10 mud-height-full">
+
+
+                        @Body
+
+                     
+
+                    </MudContainer>
+
+                </MudMainContent>
+                <MudAppBar Style="height:35px;" DisableGutters=true
+                Bottom=true 
+                Dense=true Color=Color.Dark Elevation="1">
+                    <MudStack Class="mud-width-full pa-0 ma-0 ps-3" Row=true>
+                        <AppFooter Class="align-middle"/>
+                        
+                      
+                    </MudStack>
+                </MudAppBar>
+               
+         
+    </MudLayout>
+
+@*
 <MudLayout>
-            <ErrorMenu />
+          <ErrorMenu />
 
     <MudLayout>
         <MudMainContent>
@@ -20,5 +65,5 @@
             <AppFooter />
 
     </MudLayout>
-</MudLayout>
+</MudLayout>*@
 
