--- a/BLAZAMGui/Layouts/AppFooter.razor
+++ b/BLAZAMGui/Layouts/AppFooter.razor
@@ -24,4 +24,10 @@
 @code{
     [Parameter]
     public string? Class{ get; set; }
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+    }
 }
