--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -104,12 +104,12 @@
         </ChildContent>
 
     </MudTabPanel>
-    <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(customUser==null)">
+    <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(newUser==null)">
         <TabContent>
             Details
         </TabContent>
         <ChildContent>
-            <ViewUser DirectoryEntry="@customUser" />
+            <ViewUser DirectoryEntry="@newUser" />
             <MudButton Color=Color.Primary OnClick="@(()=>{SelectedStep=4;})">Back</MudButton>
             <MudButton Color=Color.Success OnClick="@(()=>{SelectedStep=6;})">Next</MudButton>
         </ChildContent>
@@ -117,7 +117,7 @@
     </MudTabPanel>
 
 
-    <MudTabPanel Disabled=@(customUser==null && newUser==null)>
+    <MudTabPanel Disabled=@(newUser==null)>
         <TabContent>
             Confirm
         </TabContent>
@@ -163,7 +163,6 @@
     NewUserName newUserName = new NewUserName();
     bool collapseVisible = false;
     IADOrganizationalUnit? selectedOU;
-    IADUser? customUser;
     IADUser? newUser;
 
     protected override async Task OnInitializedAsync()
@@ -233,6 +232,9 @@
             try
             {
                 if (fieldValue.Field != null)
+                if(fieldValue.Field.FieldName.ToLower()=="homedirectory")
+                        newUser.HomeDirectory = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
+                else
                     newUser.NewEntryProperties[fieldValue.Field.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
                 else if (fieldValue.CustomField != null)
                     newUser.NewEntryProperties[fieldValue.CustomField.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
